--- a/Justgram-ui/main.html
+++ b/Justgram-ui/main.html
@@ -19,7 +19,7 @@
         </div>
         <div class="inputBox" style="flex-grow: 1">
           <div class="inputBoxContainer">
-            <a href=""><img src="/img/focus.png" width="16px" /></a>
+            <a href=""><img src="img/focus.png" width="16px" /></a>
             <input type="text" placeholder="검색" />
           </div>
         </div>
@@ -33,7 +33,7 @@
     <section class="peed">
       <div class="selector"></div>
       
-
+<!-- 카드 엘리먼트 컨테이너 -->
       <div class="card-element">
         <div class="card">
           <div class="cardTop"></div>
@@ -47,24 +47,76 @@
           </div>
           <div class="cardComment">
             <div class="cardCommentList">
-              <!-- <span class="like"><img src="img/beforeheart.png" style="width: 16px;"></span> -->
               <ul class="cardCommentUl">
-                <!-- <li><span>우주호</span>와 너무 예뻐요</li> -->
-
               </ul>
-
             </div>
-            
           </div>
           <div class="cardCommentInputBox">
-            <form class="cardCommentInput" id="CommentForm">
-              <a href=""><img style="height: 24px" src="/img/smile.png" /></a>
-              <input id="listArea" placeholder="댓글 달기..."></input>
-              <button id="listButton" type="submit" disabled>게시</button>
+            <form class="cardCommentInput CommentForm">
+              <a href=""><img style="height: 24px" src="img/smile.png" /></a>
+              <input class="listArea" placeholder="댓글 달기..."></input>
+              <button class="listButton" type="submit" disabled>게시</button>
             </form>
           </div>
         </div>
       </div>
+<!-- 카드 엘리먼트 컨테이너 -->
+<!-- 카드 엘리먼트 컨테이너 -->
+<div class="card-element">
+  <div class="card">
+    <div class="cardTop"></div>
+    <div class="cardImg">
+      <img src="img/2.avif" />
+    </div>
+    <div class="cardLink">
+      <a href=""><img src="img/nav.png" style="height: 24px" /></a>
+      <a href=""><img src="img/heart.png" style="height: 24px" /></a>
+      <a href=""><img src="img/my.png" style="height: 24px" /></a>
+    </div>
+    <div class="cardComment">
+      <div class="cardCommentList">
+        <ul class="cardCommentUl">
+        </ul>
+      </div>
+    </div>
+    <div class="cardCommentInputBox">
+      <form class="cardCommentInput CommentForm">
+        <a href=""><img style="height: 24px" src="img/smile.png" /></a>
+        <input class="listArea" placeholder="댓글 달기..."></input>
+        <button class="listButton" type="submit" disabled>게시</button>
+      </form>
+    </div>
+  </div>
+</div>
+<!-- 카드 엘리먼트 컨테이너 -->
+<!-- 카드 엘리먼트 컨테이너 -->
+<div class="card-element">
+  <div class="card">
+    <div class="cardTop"></div>
+    <div class="cardImg">
+      <img src="img/3.avif" />
+    </div>
+    <div class="cardLink">
+      <a href=""><img src="img/nav.png" style="height: 24px" /></a>
+      <a href=""><img src="img/heart.png" style="height: 24px" /></a>
+      <a href=""><img src="img/my.png" style="height: 24px" /></a>
+    </div>
+    <div class="cardComment">
+      <div class="cardCommentList">
+        <ul class="cardCommentUl">
+        </ul>
+      </div>
+    </div>
+    <div class="cardCommentInputBox">
+      <form class="cardCommentInput CommentForm">
+        <a href=""><img style="height: 24px" src="img/smile.png" /></a>
+        <input class="listArea" placeholder="댓글 달기..."></input>
+        <button class="listButton" type="submit" disabled>게시</button>
+      </form>
+    </div>
+  </div>
+</div>
+<!-- 카드 엘리먼트 컨테이너 -->
     </section>
     <script src="js/list.js"></script>
   </body>
