Add : 피드별 댓글 & 작성자, 댓글 분리

--- a/Justgram-ui/main.html
+++ b/Justgram-ui/main.html
@@ -33,7 +33,7 @@
     <section class="peed">
       <div class="selector"></div>
       
-<!-- 카드 엘리먼트 컨테이너 -->
+<!-- 카드 엘리먼트 컨테이너 START-->
       <div class="card-element">
         <div class="card">
           <div class="cardTop"></div>
@@ -54,14 +54,15 @@
           <div class="cardCommentInputBox">
             <form class="cardCommentInput CommentForm">
               <a href=""><img style="height: 24px" src="img/smile.png" /></a>
-              <input class="listArea" placeholder="댓글 달기..."></input>
+              <input class="userNameArea" placeholder="작성자"></input>
+              <input class="listInputArea" placeholder="댓글 달기..."></input>
               <button class="listButton" type="submit" disabled>게시</button>
             </form>
           </div>
         </div>
       </div>
-<!-- 카드 엘리먼트 컨테이너 -->
-<!-- 카드 엘리먼트 컨테이너 -->
+<!-- 카드 엘리먼트 컨테이너 END-->
+<!-- 카드 엘리먼트 컨테이너 START-->
 <div class="card-element">
   <div class="card">
     <div class="cardTop"></div>
@@ -82,14 +83,15 @@
     <div class="cardCommentInputBox">
       <form class="cardCommentInput CommentForm">
         <a href=""><img style="height: 24px" src="img/smile.png" /></a>
-        <input class="listArea" placeholder="댓글 달기..."></input>
+        <input class="userNameArea" placeholder="작성자"></input>
+        <input class="listInputArea" placeholder="댓글 달기..."></input>
         <button class="listButton" type="submit" disabled>게시</button>
       </form>
     </div>
   </div>
 </div>
-<!-- 카드 엘리먼트 컨테이너 -->
-<!-- 카드 엘리먼트 컨테이너 -->
+<!-- 카드 엘리먼트 컨테이너 END-->
+<!-- 카드 엘리먼트 컨테이너 START-->
 <div class="card-element">
   <div class="card">
     <div class="cardTop"></div>
@@ -110,13 +112,14 @@
     <div class="cardCommentInputBox">
       <form class="cardCommentInput CommentForm">
         <a href=""><img style="height: 24px" src="img/smile.png" /></a>
-        <input class="listArea" placeholder="댓글 달기..."></input>
+        <input class="userNameArea" placeholder="작성자"></input>
+        <input class="listInputArea" placeholder="댓글 달기..."></input>
         <button class="listButton" type="submit" disabled>게시</button>
       </form>
     </div>
   </div>
 </div>
-<!-- 카드 엘리먼트 컨테이너 -->
+<!-- 카드 엘리먼트 컨테이너 END-->
     </section>
     <script src="js/list.js"></script>
   </body>
