fix: 이미지 상단 프로필사진 및 유저명 레이아웃

--- a/Justgram-ui/main.html
+++ b/Justgram-ui/main.html
@@ -36,7 +36,9 @@
 <!-- 카드 엘리먼트 컨테이너 START-->
       <div class="card-element">
         <div class="card">
-          <div class="cardTop"></div>
+          <div class="cardTop">
+            <span><img src="picture/Man1.avif" ></span><span class="cardTopUsername">우주호</span>
+          </div>
           <div class="cardImg">
             <img src="img/1.avif" />
           </div>
