--- a/UI/main.html
+++ b/UI/main.html
@@ -41,7 +41,7 @@
           <img src="../UI/img/mark.png" class="mark-icon bar-icon" />
         </div>
         <div class="feed-content">
-          <p>야옹이 너무 귀엽죠 ㅎㅎ</p>
+          <p>야옹이 너무 귀엽죠 ㅎ!!</p>
         </div>
         <input type="text" placeholder="댓글 달기..." class="comment" />
       </div>
