pr 요청사항 수정

--- a/UI/main.html
+++ b/UI/main.html
@@ -10,15 +10,15 @@
   </head>
   <body>
     <header>
-      <div class="l-meun">
+      <div class="left-meun">
         <img src="../UI/img/main.png" class="main-logo" />
         <img src="../UI/img/line.png" class="main-line" />
         <span class="Jg-logo">Justgram</span>
       </div>
-      <div class="c-menu">
+      <div class="center-menu">
         <input type="text" placeholder="검색" class="search-bar" />
       </div>
-      <div class="r-menu">
+      <div class="right-menu">
         <img src="../UI/img/explore.png" class="mg-r20" />
         <img src="../UI/img/heart.png" id="heart" class="mg-r20" />
         <img src="../UI/img/profile.png" class="mg-r20" />
