--- a/UI/main.html
+++ b/UI/main.html
@@ -41,10 +41,18 @@
           <img src="../UI/img/mark.png" class="mark-icon bar-icon" />
         </div>
         <div class="feed-content">
-          <p>야옹이 너무 귀엽죠 ㅎ!</p>
+          <p>야옹이 너무 귀엽죠 ㅎ</p>
         </div>
-        <input type="text" placeholder="댓글 달기..." class="comment" />
+        <div id="comment-list"></div>
+        <p class="feed-time">42분 전</p>
+        <div class="comment-box">
+          <input type="text" placeholder="댓글 달기..." id="comment" />
+          <button type="button" onclick="" id="comment-button">
+            <b>게시</b>
+          </button>
+        </div>
       </div>
     </main>
   </body>
+  <script src="./js/main.js"></script>
 </html>
