--- a/Justgram-ui/main.html
+++ b/Justgram-ui/main.html
@@ -9,24 +9,24 @@
       src="https://kit.fontawesome.com/c151186362.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>instagram</title>
   </head>
   <body>
     <header class="header">
       <div class="container">
         <div class="logoBox">
-          <a href=""><img src="img/instalogo.png" class="logo" /></a>
+          <a href=""><img alt='instagram' src="img/instalogo.png" class="logo" /></a>
         </div>
         <div class="inputBox" style="flex-grow: 1">
           <div class="inputBoxContainer">
-            <a href=""><img src="img/focus.png" width="16px" /></a>
+            <a href=""><img alt='explorer' src="img/focus.png" width="16px" /></a>
             <input type="text" placeholder="검색" />
           </div>
         </div>
         <div class="linkBox">
-          <a href=""><img src="img/nav.png" style="height: 29px" /></a>
-          <a href=""><img src="img/heart.png" style="height: 29px" /></a>
-          <a href=""><img src="img/my.png" style="height: 29px" /></a>
+          <a href=""><img alt="nav" src="img/nav.png" style="height: 29px" /></a>
+          <a href=""><img alt="heart" src="img/heart.png" style="height: 29px" /></a>
+          <a href=""><img alt="my" src="img/my.png" style="height: 29px" /></a>
         </div>
       </div>
     </header>
@@ -37,15 +37,15 @@
       <div class="card-element">
         <div class="card">
           <div class="cardTop">
-            <span><img src="picture/Man1.avif" ></span><span class="cardTopUsername">우주호</span>
+            <span><img alt='profilePicture' src="picture/Man1.avif" ></span><span class="cardTopUsername">우주호</span>
           </div>
           <div class="cardImg">
-            <img src="img/1.avif" />
+            <img alt='pictureContents' src="img/1.avif" />
           </div>
           <div class="cardLink">
-            <a href=""><img src="img/nav.png" style="height: 24px" /></a>
-            <a href=""><img src="img/heart.png" style="height: 24px" /></a>
-            <a href=""><img src="img/my.png" style="height: 24px" /></a>
+            <a href=""><img alt="nav" src="img/nav.png" style="height: 24px" /></a>
+            <a href=""><img alt="heart" src="img/heart.png" style="height: 24px" /></a>
+            <a href=""><img alt="my" src="img/my.png" style="height: 24px" /></a>
           </div>
           <div class="cardComment">
             <div class="cardCommentList">
@@ -55,7 +55,7 @@
           </div>
           <div class="cardCommentInputBox">
             <form class="cardCommentInput CommentForm">
-              <a href=""><img style="height: 24px" src="img/smile.png" /></a>
+              <a href=""><img alt="imoticon" style="height: 24px" src="img/smile.png" /></a>
               <input class="userNameArea" placeholder="작성자"></input>
               <input class="listInputArea" placeholder="댓글 달기..."></input>
               <button class="listButton" type="submit" disabled>게시</button>
