--- a/Justgram-ui/index.html
+++ b/Justgram-ui/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Document</title>
   </head>
   <body>
-    <div id="loginContainer">
-      <a href=""><img src="img/instalogo.png" /></a>
+    <section id="loginContainer">
+      <a href=""><img alt="instagram" src="img/instalogo.png" /></a>
       <form id="userInfoForm">
         <input
           id="username"
@@ -18,10 +18,10 @@
         />
         <input id="password" type="password" placeholder="비밀번호" />
         <button class="loginButton" type="submit" disabled>로그인</button>
-        <a href=""><img src="img/instagram.png" style="width: 16px ;" /></a>
+        <a href=""><img alt="instagram" src="img/instagram.png" style="width: 16px ;" /></a>
       </form>
       <a href="">비밀번호를 잊으셨나요 ?</a>
-    </div>
+    </section>
     <script src="js/login.js"></script>
   </body>
 </html>
