--- a/LeeEunJi/UI/main.html
+++ b/LeeEunJi/UI/main.html
@@ -43,13 +43,11 @@
         <div class="feed-content">
           <p>야옹이 너무 귀엽죠 ㅎ</p>
         </div>
-        <div id="comment-list"></div>
+        <div class="comment-list"></div>
         <p class="feed-time">42분 전</p>
         <div class="comment-box">
-          <input type="text" placeholder="댓글 달기..." id="comment" />
-          <button type="button" onclick="" id="comment-button">
-            <b>게시</b>
-          </button>
+          <input type="text" placeholder="댓글 달기..." class="comment" />
+          <button type="button" onclick="" class="comment-button">게시</button>
         </div>
       </div>
     </main>
