--- a/LeeEunJi/UI/main.html
+++ b/LeeEunJi/UI/main.html
@@ -50,6 +50,56 @@
           <button type="button" onclick="" class="comment-button">게시</button>
         </div>
       </div>
+      <div class="main-feed">
+        <div class="feed-header">
+          <img src="../UI/img/profile1.jpg" class="profile" />
+          <span id="id"><b>Choo</b></span>
+          <img src="../UI/img/dots.png" class="meun-dots" />
+        </div>
+        <div class="feed-photo">
+          <img src="../UI/img/cat.jpg" class="cat-photo" />
+        </div>
+        <div class="menu-bar">
+          <img src="../UI/img/heart.png" class="heart bar-icon" />
+          <img src="../UI/img/chat.png" class="chat-icon bar-icon" />
+          <img src="../UI/img/upload.png" class="up-icon bar-icon" />
+          <img src="../UI/img/mark.png" class="mark-icon bar-icon" />
+        </div>
+        <div class="feed-content">
+          <p>야옹이 너무 귀엽죠 ㅎ</p>
+        </div>
+        <div class="comment-list"></div>
+        <p class="feed-time">42분 전</p>
+        <div class="comment-box">
+          <input type="text" placeholder="댓글 달기..." class="comment" />
+          <button type="button" onclick="" class="comment-button">게시</button>
+        </div>
+      </div>
+      <div class="main-feed">
+        <div class="feed-header">
+          <img src="../UI/img/profile1.jpg" class="profile" />
+          <span id="id"><b>Choo</b></span>
+          <img src="../UI/img/dots.png" class="meun-dots" />
+        </div>
+        <div class="feed-photo">
+          <img src="../UI/img/cat.jpg" class="cat-photo" />
+        </div>
+        <div class="menu-bar">
+          <img src="../UI/img/heart.png" class="heart bar-icon" />
+          <img src="../UI/img/chat.png" class="chat-icon bar-icon" />
+          <img src="../UI/img/upload.png" class="up-icon bar-icon" />
+          <img src="../UI/img/mark.png" class="mark-icon bar-icon" />
+        </div>
+        <div class="feed-content">
+          <p>야옹이 너무 귀엽죠 ㅎ</p>
+        </div>
+        <div class="comment-list"></div>
+        <p class="feed-time">42분 전</p>
+        <div class="comment-box">
+          <input type="text" placeholder="댓글 달기..." class="comment" />
+          <button type="button" onclick="" class="comment-button">게시</button>
+        </div>
+      </div>
     </main>
   </body>
   <script src="./js/main.js"></script>
