--- a/goohyun/login.html
+++ b/goohyun/login.html
@@ -2,31 +2,56 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>justgram-login</title>
+
+    <title>Justgram - Login Page</title>
+
+    <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style/login.css" />
+    <!-- css -->
+    <link rel="stylesheet" href="./style/common.css" />
+    <link rel="stylesheet" href="./style/login.css" />
   </head>
-  <body class="flexCenter">
-    <div class="rowCenter" id="loginDiv">
-      <div id="logo">justgram</div>
-      <div class="rowCenter" id="inputDiv">
-        <input
-          id="id"
-          type="text"
-          placeholder="전화번호, 사용자 이름 또는 이메일"
-        />
-        <input id="password" type="password" placeholder="비밀번호" />
-        <button type="button" id="loginButton" disabled>로그인</button>
-      </div>
-      <div class="flexCenter" id="foundPW">
-        <a href="">비밀번호를 잊으셨나요?</a>
+  <body>
+    <div class="flex-center container">
+      <div class="login-container">
+        <div class="logo-wrapper flex-center">
+          <span class="logo-text">Justgram</span>
+        </div>
+        <div class="form-wrapper">
+          <form id="login-form">
+            <div class="flex-center login-wrapper">
+              <input
+                id="id-input"
+                class="login-input"
+                type="text"
+                placeholder="전화번호, 사용자 이름 또는 이메일"
+              />
+            </div>
+            <div class="flex-center login-wrapper">
+              <input
+                id="pw-input"
+                class="login-input"
+                type="password"
+                placeholder="비밀번호"
+              />
+            </div>
+            <div class="flex-center button-wrapper">
+              <button id="login-btn" class="login-button" type="submit">
+                로그인
+              </button>
+            </div>
+          </form>
+        </div>
+        <div class="flex-center extra-wrapper">
+          <a class="find-password">비밀번호를 잊으셨나요?</a>
+        </div>
       </div>
     </div>
-    <script src="/js/login.js"></script>
   </body>
+  <script src="./js/login.js"></script>
 </html>
