--- a/chanyoung/main.html
+++ b/chanyoung/main.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/init.css">
   <link rel="stylesheet" href="/css/main.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Sunflower&display=swap');
@@ -20,7 +21,7 @@
         <input type="text" class="search toInputSet" placeholder="검색">
       </div>
       <div class="headerMenu">
-        <div class="icon">
+        <div class="headerIcon">
           <a href="javascript:void(0)">
             <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/explore.png" alt="">
           </a>
@@ -35,7 +36,7 @@
     </div>
     <div id="contents">
       <div class="article">
-        <div class="contentsHeader">
+        <div class="feedHeader">
           <div class="picTitle">
             <img src="/img/feedPic/Profile.jpg" alt="" class="profile">
             <a href="javascript:void(0)">poy.lib</a>
@@ -46,10 +47,10 @@
             </button>
           </div>
         </div>
-        <div class="contentsPic">
+        <div class="feedPic">
           <img src="/img/feedPic/feed1.jpg" alt="">
         </div>
-        <div class="contentsMenu">
+        <div class="feedMenu">
           <div>
             <button class="toButtonSet">
               <img src="/img/heart.png" alt="">
@@ -67,7 +68,7 @@
             </button>
           </div>
         </div>
-        <div class="contentsComments">
+        <div class="feedComments">
           <div class="likeText">
             <span class="toBold">좋아요</span>
             <span class="toBold">28</span>
@@ -79,7 +80,6 @@
                 첫 번째 게시글
               </span>
             <ul class="commentsWrapper">
-              <li class="commentText"></li>
             </ul>
           </div>
           <span>42분 전</span>
@@ -95,7 +95,7 @@
     </div>
     <div id="contents">
       <div class="article">
-        <div class="contentsHeader">
+        <div class="feedHeader">
           <div class="picTitle">
             <img src="/img/feedPic/Profile.jpg" alt="" class="profile">
             <a href="javascript:void(0)">poy.lib</a>
@@ -106,10 +106,10 @@
             </button>
           </div>
         </div>
-        <div class="contentsPic">
+        <div class="feedPic">
           <img src="/img/feedPic/feed2.jpg" alt="">
         </div>
-        <div class="contentsMenu">
+        <div class="feedMenu">
           <div>
             <button class="toButtonSet">
               <img src="/img/heart.png" alt="">
@@ -127,7 +127,7 @@
             </button>
           </div>
         </div>
-        <div class="contentsComments">
+        <div class="feedComments">
           <div class="likeText">
             <span class="toBold">좋아요</span>
             <span class="toBold">28</span>
@@ -155,7 +155,7 @@
     </div>
     <div id="contents">
       <div class="article">
-        <div class="contentsHeader">
+        <div class="feedHeader">
           <div class="picTitle">
             <img src="/img/feedPic/Profile.jpg" alt="" class="profile">
             <a href="javascript:void(0)">poy.lib</a>
@@ -166,10 +166,10 @@
             </button>
           </div>
         </div>
-        <div class="contentsPic">
+        <div class="feedPic">
           <img src="/img/feedPic/feed3.jpg" alt="">
         </div>
-        <div class="contentsMenu">
+        <div class="feedMenu">
           <div>
             <button class="toButtonSet">
               <img src="/img/heart.png" alt="">
@@ -187,7 +187,7 @@
             </button>
           </div>
         </div>
-        <div class="contentsComments">
+        <div class="feedComments">
           <div class="likeText">
             <span class="toBold">좋아요</span>
             <span class="toBold">28</span>
