add : JSON fetch 후 동적으로 댓글 생성 / 피드 작성자에 맞는 프로필사진

--- a/Woojuho/main.html
+++ b/Woojuho/main.html
@@ -37,10 +37,10 @@
       <div class="card-element">
         <div class="card">
           <div class="cardTop">
-            <span><img alt='profilePicture' src="picture/Man1.avif" ></span><span class="cardTopUsername">우주호</span>
+            <span><img class="profilePicture" alt='profilePicture' src="https://images.unsplash.com/photo-1502323703385-c3ea9ace787d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80"></span><span class="cardTopUsername"></span>
           </div>
           <div class="cardImg">
-            <img alt='pictureContents' src="img/1.avif" />
+            <img class="cardImgUrl" alt='pictureContents' src="img/1.avif" />
           </div>
           <div class="cardLink">
             <a href=""><img alt="nav" src="img/nav.png" style="height: 24px" /></a>
@@ -67,14 +67,16 @@
 <!-- 카드 엘리먼트 컨테이너 START-->
 <div class="card-element">
   <div class="card">
-    <div class="cardTop"></div>
+    <div class="cardTop">
+      <span><img class="profilePicture" alt='profilePicture' src="https://images.unsplash.com/photo-1502323703385-c3ea9ace787d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80"></span><span class="cardTopUsername"></span>
+    </div>
     <div class="cardImg">
-      <img src="img/2.avif" />
+      <img class="cardImgUrl" alt='pictureContents' src="img/1.avif" />
     </div>
     <div class="cardLink">
-      <a href=""><img src="img/nav.png" style="height: 24px" /></a>
-      <a href=""><img src="img/heart.png" style="height: 24px" /></a>
-      <a href=""><img src="img/my.png" style="height: 24px" /></a>
+      <a href=""><img alt="nav" src="img/nav.png" style="height: 24px" /></a>
+      <a href=""><img alt="heart" src="img/heart.png" style="height: 24px" /></a>
+      <a href=""><img alt="my" src="img/my.png" style="height: 24px" /></a>
     </div>
     <div class="cardComment">
       <div class="cardCommentList">
@@ -84,7 +86,7 @@
     </div>
     <div class="cardCommentInputBox">
       <form class="cardCommentInput CommentForm">
-        <a href=""><img style="height: 24px" src="img/smile.png" /></a>
+        <a href=""><img alt="imoticon" style="height: 24px" src="img/smile.png" /></a>
         <input class="userNameArea" placeholder="작성자"></input>
         <input class="listInputArea" placeholder="댓글 달기..."></input>
         <button class="listButton" type="submit" disabled>게시</button>
@@ -96,14 +98,16 @@
 <!-- 카드 엘리먼트 컨테이너 START-->
 <div class="card-element">
   <div class="card">
-    <div class="cardTop"></div>
+    <div class="cardTop">
+      <span><img class="profilePicture" alt='profilePicture' src="https://images.unsplash.com/photo-1502323703385-c3ea9ace787d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80"></span><span class="cardTopUsername"></span>
+    </div>
     <div class="cardImg">
-      <img src="img/3.avif" />
+      <img class="cardImgUrl" alt='pictureContents' src="img/1.avif" />
     </div>
     <div class="cardLink">
-      <a href=""><img src="img/nav.png" style="height: 24px" /></a>
-      <a href=""><img src="img/heart.png" style="height: 24px" /></a>
-      <a href=""><img src="img/my.png" style="height: 24px" /></a>
+      <a href=""><img alt="nav" src="img/nav.png" style="height: 24px" /></a>
+      <a href=""><img alt="heart" src="img/heart.png" style="height: 24px" /></a>
+      <a href=""><img alt="my" src="img/my.png" style="height: 24px" /></a>
     </div>
     <div class="cardComment">
       <div class="cardCommentList">
@@ -113,7 +117,7 @@
     </div>
     <div class="cardCommentInputBox">
       <form class="cardCommentInput CommentForm">
-        <a href=""><img style="height: 24px" src="img/smile.png" /></a>
+        <a href=""><img alt="imoticon" style="height: 24px" src="img/smile.png" /></a>
         <input class="userNameArea" placeholder="작성자"></input>
         <input class="listInputArea" placeholder="댓글 달기..."></input>
         <button class="listButton" type="submit" disabled>게시</button>
@@ -124,5 +128,6 @@
 <!-- 카드 엘리먼트 컨테이너 END-->
     </section>
     <script src="js/list.js"></script>
+    <script src="js/paintlist.js"></script>
   </body>
 </html>
