fix : 1차 리펙토링

--- a/Woojuho/main.html
+++ b/Woojuho/main.html
@@ -15,63 +15,40 @@
     <header class="header">
       <div class="container">
         <div class="logoBox">
-          <a href=""><img alt='instagram' src="img/instalogo.png" class="logo" /></a>
+          <a href=""
+            ><img alt="instagram" src="img/instalogo.png" class="logo"
+          /></a>
         </div>
         <div class="inputBox" style="flex-grow: 1">
           <div class="inputBoxContainer">
-            <a href=""><img alt='explorer' src="img/focus.png" width="16px" /></a>
+            <a href=""
+              ><img alt="explorer" src="img/focus.png" width="16px"
+            /></a>
             <input type="text" placeholder="검색" />
           </div>
         </div>
         <div class="linkBox">
-          <a href=""><img alt="nav" src="img/nav.png" style="height: 29px" /></a>
-          <a href=""><img alt="heart" src="img/heart.png" style="height: 29px" /></a>
+          <a href=""
+            ><img alt="nav" src="img/nav.png" style="height: 29px"
+          /></a>
+          <a href=""
+            ><img alt="heart" src="img/heart.png" style="height: 29px"
+          /></a>
           <a href=""><img alt="my" src="img/my.png" style="height: 29px" /></a>
         </div>
       </div>
     </header>
-    <section class="peed">
+    <section class="feed">
       <div class="selector"></div>
-      
-<!-- 카드 엘리먼트 컨테이너 START-->
+
+      <!-- 카드 엘리먼트 컨테이너 START-->
       <div class="card-element">
-        <div class="card">
-          <div class="cardTop">
-            <span><img class="profilePicture" alt='profilePicture' src="https://images.unsplash.com/photo-1502323703385-c3ea9ace787d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80"></span><span class="cardTopUsername"></span>
-          </div>
-          <div class="cardImg">
-            <img class="cardImgUrl" alt='pictureContents' src="img/1.avif" />
-          </div>
-          <div class="cardLink">
-            <a href=""><img alt="nav" src="img/nav.png" style="height: 24px" /></a>
-            <a href=""><img alt="heart" src="img/heart.png" style="height: 24px" /></a>
-            <a href=""><img alt="my" src="img/my.png" style="height: 24px" /></a>
-          </div>
-          <div class="cardComment">
-            <div class="cardCommentList">
-              <ul class="cardCommentUl">
-              </ul>
-            </div>
-          </div>
-          <div class="cardCommentInputBox">
-            <form class="cardCommentInput CommentForm">
-              <a href=""><img alt="imoticon" style="height: 24px" src="img/smile.png" /></a>
-              <input class="userNameArea" placeholder="작성자"></input>
-              <input class="listInputArea" placeholder="댓글 달기..."></input>
-              <button class="listButton" type="submit" disabled>게시</button>
-            </form>
-          </div>
-        </div>
-      </div>
-<!-- 카드 엘리먼트 컨테이너 END-->
-<!-- 카드 엘리먼트 컨테이너 START-->
-<div class="card-element">
   <div class="card">
     <div class="cardTop">
-      <span><img class="profilePicture" alt='profilePicture' src="https://images.unsplash.com/photo-1502323703385-c3ea9ace787d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80"></span><span class="cardTopUsername"></span>
+      <span><img class="profilePicture" alt='profilePicture'></span><span class="cardTopUsername"></span>
     </div>
     <div class="cardImg">
-      <img class="cardImgUrl" alt='pictureContents' src="img/1.avif" />
+      <img class="cardImgUrl" alt='pictureContents'/>
     </div>
     <div class="cardLink">
       <a href=""><img alt="nav" src="img/nav.png" style="height: 24px" /></a>
@@ -94,15 +71,15 @@
     </div>
   </div>
 </div>
-<!-- 카드 엘리먼트 컨테이너 END-->
-<!-- 카드 엘리먼트 컨테이너 START-->
-<div class="card-element">
+      <!-- 카드 엘리먼트 컨테이너 END-->
+      <!-- 카드 엘리먼트 컨테이너 START-->
+      <div class="card-element">
   <div class="card">
     <div class="cardTop">
-      <span><img class="profilePicture" alt='profilePicture' src="https://images.unsplash.com/photo-1502323703385-c3ea9ace787d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80"></span><span class="cardTopUsername"></span>
+      <span><img class="profilePicture" alt='profilePicture'></span><span class="cardTopUsername"></span>
     </div>
     <div class="cardImg">
-      <img class="cardImgUrl" alt='pictureContents' src="img/1.avif" />
+      <img class="cardImgUrl" alt='pictureContents'/>
     </div>
     <div class="cardLink">
       <a href=""><img alt="nav" src="img/nav.png" style="height: 24px" /></a>
@@ -125,7 +102,38 @@
     </div>
   </div>
 </div>
-<!-- 카드 엘리먼트 컨테이너 END-->
+      <!-- 카드 엘리먼트 컨테이너 END-->
+      <!-- 카드 엘리먼트 컨테이너 START-->
+      <div class="card-element">
+  <div class="card">
+    <div class="cardTop">
+      <span><img class="profilePicture" alt='profilePicture'></span><span class="cardTopUsername"></span>
+    </div>
+    <div class="cardImg">
+      <img class="cardImgUrl" alt='pictureContents'/>
+    </div>
+    <div class="cardLink">
+      <a href=""><img alt="nav" src="img/nav.png" style="height: 24px" /></a>
+      <a href=""><img alt="heart" src="img/heart.png" style="height: 24px" /></a>
+      <a href=""><img alt="my" src="img/my.png" style="height: 24px" /></a>
+    </div>
+    <div class="cardComment">
+      <div class="cardCommentList">
+        <ul class="cardCommentUl">
+        </ul>
+      </div>
+    </div>
+    <div class="cardCommentInputBox">
+      <form class="cardCommentInput CommentForm">
+        <a href=""><img alt="imoticon" style="height: 24px" src="img/smile.png" /></a>
+        <input class="userNameArea" placeholder="작성자"></input>
+        <input class="listInputArea" placeholder="댓글 달기..."></input>
+        <button class="listButton" type="submit" disabled>게시</button>
+      </form>
+    </div>
+  </div>
+</div>
+      <!-- 카드 엘리먼트 컨테이너 END-->
     </section>
     <script src="js/list.js"></script>
     <script src="js/paintlist.js"></script>
