--- a/chanyoung/main.html
+++ b/chanyoung/main.html
@@ -43,7 +43,7 @@
           </div>
           <div class="picMenu">
             <button class="toButtonSet">
-              <img src="/img/dots.png" alt="">
+              <img src="/img/icon/dots.png" alt="">
             </button>
           </div>
         </div>
@@ -53,18 +53,18 @@
         <div class="feedMenu">
           <div>
             <button class="toButtonSet">
-              <img src="/img/heart.png" alt="">
+              <img src="/img/icon/heart.png" alt="">
             </button>
             <button class="toButtonSet">
-              <img src="/img/chat.png" alt="" style="width: 28px;">
+              <img src="/img/icon/chat.png" alt="" style="width: 28px;">
             </button>
             <button class="toButtonSet">
-              <img src="/img/send.png" alt="">
+              <img src="/img/icon/send.png" alt="">
             </button>
           </div>
           <div class="toRight">
             <button class="toButtonSet">
-              <img src="/img/save-instagram.png" alt="">
+              <img src="/img/icon/save-instagram.png" alt="">
             </button>
           </div>
         </div>
@@ -78,7 +78,9 @@
               첫 번째 게시글
             </span>
             <ul class="commentsWrapper">
-              <li><a href="javascript:void(0)" class="loadCommentsID"></a><span class="loadComments"></span></li>
+              <li>
+                <a href="javascript:void(0)" class="loadCommentsID"></a><span class="loadComments"></span><img alt="댓글하트" class="heartCheck emptyHeart">
+              </li>
             </ul>
           </div>
           <span>42분 전</span>
