add: 댓글 삭제 버튼

--- a/chanyoung/main.html
+++ b/chanyoung/main.html
@@ -79,7 +79,7 @@
             </span>
             <ul class="commentsWrapper">
               <li>
-                <a href="javascript:void(0)" class="loadCommentsID"></a><span class="loadComments"></span><img alt="댓글하트" class="heartCheck emptyHeart">
+                <a href="javascript:void(0)" class="loadCommentsID"></a><span class="loadComments"></span><img alt="댓글 삭제 버튼" class="deleteButton"><img alt="댓글하트" class="heartCheck emptyHeart">
               </li>
             </ul>
           </div>
