--- a/chanyoung/main.html
+++ b/chanyoung/main.html
@@ -73,13 +73,132 @@
             <span class="toBold likeCount"></span>
           </div>
           <div class="comments">
-            <span class="contentsText">
-              <a href="javascript:void(0)">poy.lib</a>
-              첫 번째 게시글
+            <span>
+              <a href="javascript:void(0)" class="contentsID">poy.lib</a>
+              <span class="contentsText"></span>
             </span>
             <ul class="commentsWrapper">
               <li>
                 <a href="javascript:void(0)" class="loadCommentsID"></a><span class="loadComments"></span><img alt="댓글 삭제 버튼" class="deleteButton"><img alt="댓글하트" class="heartCheck emptyHeart">
+              </li>
+            </ul>
+          </div>
+          <span>42분 전</span>
+        </div>
+        <div class="writecomments">
+          <form type="submit" class="commentsForm">
+            <input type="text" class="toInputSet commentsInput" placeholder="댓글 달기...">
+            <button class="toButtonSet commentsBtn">게시</button>
+          </form>
+        </div>
+      </div>
+
+      <div class="article">
+        <div class="feedHeader">
+          <div class="picTitle">
+            <img alt="게시자 프로필 사진" class="profile feedWriterProfile">
+            <a href="javascript:void(0)" class="feedWriter">poy.lib</a>
+          </div>
+          <div class="picMenu">
+            <button class="toButtonSet">
+              <img src="/img/icon/dots.png" alt="">
+            </button>
+          </div>
+        </div>
+        <div class="feedPic">
+          <img alt="피드사진2" class="feedPicture">
+        </div>
+        <div class="feedMenu">
+          <div>
+            <button class="toButtonSet">
+              <img src="/img/icon/heart.png" alt="">
+            </button>
+            <button class="toButtonSet">
+              <img src="/img/icon/chat.png" alt="" style="width: 28px;">
+            </button>
+            <button class="toButtonSet">
+              <img src="/img/icon/send.png" alt="">
+            </button>
+          </div>
+          <div class="toRight">
+            <button class="toButtonSet">
+              <img src="/img/icon/save-instagram.png" alt="">
+            </button>
+          </div>
+        </div>
+        <div class="feedComments">
+          <div class="likeText">
+            <span class="toBold likeCount"></span>
+          </div>
+          <div class="comments">
+            <span>
+              <a href="javascript:void(0)" class="contentsID">poy.lib</a>
+              <span class="contentsText"></span>
+            </span>
+            </span>
+            <ul class="commentsWrapper">
+              <li>
+                <a href="javascript:void(0)" class="loadCommentsID"></a><span class="loadComments"></span><img alt="댓글 삭제 버튼"
+                  class="deleteButton"><img alt="댓글하트" class="heartCheck emptyHeart">
+              </li>
+            </ul>
+          </div>
+          <span>42분 전</span>
+        </div>
+        <div class="writecomments">
+          <form type="submit" class="commentsForm">
+            <input type="text" class="toInputSet commentsInput" placeholder="댓글 달기...">
+            <button class="toButtonSet commentsBtn">게시</button>
+          </form>
+        </div>
+      </div>
+
+      <div class="article">
+        <div class="feedHeader">
+          <div class="picTitle">
+            <img alt="게시자 프로필 사진" class="profile feedWriterProfile">
+            <a href="javascript:void(0)" class="feedWriter">poy.lib</a>
+          </div>
+          <div class="picMenu">
+            <button class="toButtonSet">
+              <img src="/img/icon/dots.png" alt="">
+            </button>
+          </div>
+        </div>
+        <div class="feedPic">
+          <img alt="피드사진3" class="feedPicture">
+        </div>
+        <div class="feedMenu">
+          <div>
+            <button class="toButtonSet">
+              <img src="/img/icon/heart.png" alt="">
+            </button>
+            <button class="toButtonSet">
+              <img src="/img/icon/chat.png" alt="" style="width: 28px;">
+            </button>
+            <button class="toButtonSet">
+              <img src="/img/icon/send.png" alt="">
+            </button>
+          </div>
+          <div class="toRight">
+            <button class="toButtonSet">
+              <img src="/img/icon/save-instagram.png" alt="">
+            </button>
+          </div>
+        </div>
+        <div class="feedComments">
+          <div class="likeText">
+            <span class="toBold likeCount"></span>
+          </div>
+          <div class="comments">
+            <span>
+              <a href="javascript:void(0)" class="contentsID">poy.lib</a>
+              <span class="contentsText"></span>
+            </span>
+            <ul class="commentsWrapper">
+              <li>
+                <a href="javascript:void(0)" class="loadCommentsID"></a><span class="loadComments"></span><img alt="댓글 삭제 버튼"
+                  class="deleteButton"><img alt="댓글하트" class="heartCheck emptyHeart">
               </li>
             </ul>
           </div>
