--- a/goohyun/main.html
+++ b/goohyun/main.html
@@ -61,21 +61,18 @@
             <div><img alt="프로필 이미지" /> 아이디</div>
             <div>...</div>
           </div>
-          <div class="to-do feed-image-wrapper">
-            <img class="feed-image" src="./image/cat.jpg" />
-          </div>
+          <!--start-->
+          <div class="to-do feed-image-wrapper"></div>
           <div class="to-do feed-menu spread-row padding-10px">
             <div>왼쪽 아이콘</div>
             <div>오른쪽 아이콘</div>
           </div>
+          <!--end-->
           <div class="to-do feed-comment">
             <div class="feed-comment-like padding-10px">
               user1 님 외 10명이 좋아합니다
             </div>
-            <div class="feed-comment-list padding-10px">
-              <div>user2 본문 내용</div>
-              <div>댓글 1</div>
-            </div>
+            <div class="feed-comment-list padding-10px"></div>
             <div class="feed-comment-time padding-10px">9시간 전</div>
             <div class="feed-comment-write padding-10px">
               <input class="comment-write-input" placeholder="댓글 달기" />
@@ -88,9 +85,7 @@
             <div><img alt="프로필 이미지" /> 아이디</div>
             <div>...</div>
           </div>
-          <div class="to-do feed-image-wrapper">
-            <img class="feed-image" src="./image/cat.jpg" />
-          </div>
+          <div class="to-do feed-image-wrapper"></div>
           <div class="to-do feed-menu spread-row padding-10px">
             <div>왼쪽 아이콘</div>
             <div>오른쪽 아이콘</div>
@@ -99,10 +94,7 @@
             <div class="feed-comment-like padding-10px">
               user1 님 외 10명이 좋아합니다
             </div>
-            <div class="feed-comment-list padding-10px">
-              <div>user2 본문 내용</div>
-              <div>댓글 1</div>
-            </div>
+            <div class="feed-comment-list padding-10px"></div>
             <div class="feed-comment-time padding-10px">9시간 전</div>
             <div class="feed-comment-write padding-10px">
               <input class="comment-write-input" placeholder="댓글 달기" />
@@ -115,9 +107,7 @@
             <div><img alt="프로필 이미지" /> 아이디</div>
             <div>...</div>
           </div>
-          <div class="to-do feed-image-wrapper">
-            <img class="feed-image" src="./image/cat.jpg" />
-          </div>
+          <div class="to-do feed-image-wrapper"></div>
           <div class="to-do feed-menu spread-row padding-10px">
             <div>왼쪽 아이콘</div>
             <div>오른쪽 아이콘</div>
@@ -126,10 +116,7 @@
             <div class="feed-comment-like padding-10px">
               user1 님 외 10명이 좋아합니다
             </div>
-            <div class="feed-comment-list padding-10px">
-              <div>user2 본문 내용</div>
-              <div>댓글 1</div>
-            </div>
+            <div class="feed-comment-list padding-10px"></div>
             <div class="feed-comment-time padding-10px">9시간 전</div>
             <div class="feed-comment-write padding-10px">
               <input class="comment-write-input" placeholder="댓글 달기" />
