--- a/goohyun/main.html
+++ b/goohyun/main.html
@@ -50,44 +50,29 @@
         <img
           class="icon-image margin-left-10px"
           src="./image/heart.png"
-          alt="heart-icon"
+          alt="like-icon"
         />
       </div>
     </header>
     <div class="flex-center">
       <div class="to-do contents-wrapper">
-        <div class="to-do feed-container">
-          <div class="to-do feed-header vertical-center padding-10px">
-            <div><img alt="프로필 이미지" /> 아이디</div>
-            <div>...</div>
-          </div>
-          <!--start-->
-          <div class="to-do feed-image-wrapper"></div>
-          <div class="to-do feed-menu spread-row padding-10px">
-            <div>왼쪽 아이콘</div>
-            <div>오른쪽 아이콘</div>
-          </div>
-          <!--end-->
-          <div class="to-do feed-comment">
-            <div class="feed-comment-like padding-10px">
-              user1 님 외 10명이 좋아합니다
-            </div>
-            <div class="feed-comment-list padding-10px"></div>
-            <div class="feed-comment-time padding-10px">9시간 전</div>
-            <div class="feed-comment-write padding-10px">
-              <input class="comment-write-input" placeholder="댓글 달기" />
-              <button class="comment-write-button">게시</button>
-            </div>
-          </div>
-        </div>
+        <!-- feed 1 -->
         <div class="to-do feed-container">
           <div class="to-do feed-header vertical-center padding-10px">
             <div><img alt="프로필 이미지" /> 아이디</div>
             <div>...</div>
           </div>
           <div class="to-do feed-image-wrapper"></div>
-          <div class="to-do feed-menu spread-row padding-10px">
-            <div>왼쪽 아이콘</div>
+          <div
+            class="to-do feed-menu vertical-center spread-row padding-row-10px"
+          >
+            <div>
+              <img
+                class="feed-menu-like icon-image"
+                src="./image/heart.png"
+                alt="like-icon"
+              />
+            </div>
             <div>오른쪽 아이콘</div>
           </div>
           <div class="to-do feed-comment">
@@ -102,14 +87,56 @@
             </div>
           </div>
         </div>
+
+        <!-- feed 2 -->
         <div class="to-do feed-container">
           <div class="to-do feed-header vertical-center padding-10px">
             <div><img alt="프로필 이미지" /> 아이디</div>
             <div>...</div>
           </div>
           <div class="to-do feed-image-wrapper"></div>
-          <div class="to-do feed-menu spread-row padding-10px">
-            <div>왼쪽 아이콘</div>
+          <div
+            class="to-do feed-menu vertical-center spread-row padding-row-10px"
+          >
+            <div>
+              <img
+                class="feed-menu-like icon-image"
+                src="./image/heart.png"
+                alt="like-icon"
+              />
+            </div>
+            <div>오른쪽 아이콘</div>
+          </div>
+          <div class="to-do feed-comment">
+            <div class="feed-comment-like padding-10px">
+              user1 님 외 10명이 좋아합니다
+            </div>
+            <div class="feed-comment-list padding-10px"></div>
+            <div class="feed-comment-time padding-10px">9시간 전</div>
+            <div class="feed-comment-write padding-10px">
+              <input class="comment-write-input" placeholder="댓글 달기" />
+              <button class="comment-write-button">게시</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- feed 3 -->
+        <div class="to-do feed-container">
+          <div class="to-do feed-header vertical-center padding-10px">
+            <div><img alt="프로필 이미지" /> 아이디</div>
+            <div>...</div>
+          </div>
+          <div class="to-do feed-image-wrapper"></div>
+          <div
+            class="to-do feed-menu vertical-center spread-row padding-row-10px"
+          >
+            <div>
+              <img
+                class="feed-menu-like icon-image"
+                src="./image/heart.png"
+                alt="like-icon"
+              />
+            </div>
             <div>오른쪽 아이콘</div>
           </div>
           <div class="to-do feed-comment">
